samples/_failures_safe/1761601937_4b8708_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f27d987a.c: In function ‘print_token’:
./samples/SAFE/__tmp_f27d987a.c:161:12: error: missing terminating " character
  161 |     printf("Line %d, Column %d: %
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f27d987a.c:161:5: error: expected expression at end of input
  161 |     printf("Line %d, Column %d: %
      |     ^~~~~~
./samples/SAFE/__tmp_f27d987a.c:161:5: error: expected declaration or statement at end of input
